--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,10 @@ html {
     background-color: #282923;
     font-family: 'Nunito', sans-serif;
     scroll-behavior: smooth;
-    background-size: auto 450px;
+    background-size: auto 50rem;
     background-image: url(src/gelo-blur.jpg);
-    
+    color:white;
+
 
 }
 
@@ -19,17 +20,17 @@ html {
     box-sizing: border-box;
 }
 
-#navbar{
+#navbar {
     position: fixed;
     top: -5em;
-    width: 100%; 
-    transition: top 0.3s; 
+    width: 100%;
+    transition: top 0.3s;
 }
 
 
 
-section{
-    min-height: 98vh;
+section {
+    min-height: 25vh;
 }
 
 
@@ -48,36 +49,65 @@ ul.anchor-links {
     justify-content: space-between;
 }
 
-.canvas-space {
-    width: 100%;
-    height: 55vh;   
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 2px solid white;
 }
 
-#intro-banner-content{
+
+.canvas-space {
+    width: 100%;
+    height: 55vh;
+}
+
+#intro-banner-content {
     margin: 5vh 0.3em;
     width: auto;
     background-color: rgba(196, 196, 196, 0.01);
     box-shadow: 0px 4px 42px 0px rgba(0, 0, 0, 1);
-    color:white;
 }
-.intro-banner-inside{
- padding: 1em;
+
+.intro-banner-inside {
+    padding: 1em;
 }
-.me-photo{
+
+.me-photo {
     width: 15em;
     border-radius: 160px;
 }
-#intro-banner-text{
+
+#intro-banner-headings {
+    padding: 1.8em 0 0 0;
 }
 
-@media (min-width: 767.98px) {
+#intro-banner-image {
+    padding: 0 0 1.8em 0;
+}
+
+.resume-description-text, .resume-heading-text {
+    text-align: center;
+}
+.graph-hr{
+    margin: 3em 0 1em;
+}
+
+/* aplicavel em telas grandes */
+@media (min-width: 768px) {
     nav[role="navigation"] {
         padding: 0.3em 8vw;
     }
-    a{
+
+    a {
         font-size: 1.5em;
     }
-    #intro-banner-content{
+
+    #intro-banner-content {
         margin: 20vh 0.3em;
     }
+
 }
+
+/* aplicavel em telas medias pra baixo*/
+@media (max-width: 767px) {}
